--- a/app/src/main/res/layout/fragment_profile_card.xml
+++ b/app/src/main/res/layout/fragment_profile_card.xml
@@ -67,27 +67,28 @@
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_LBL_name"
-           app:layout_constraintBottom_toTopOf="@id/profile_LBL_sails_count"
-           android:name="com.idan_koren_israeli.sailtracker.common.PointsStatusFragment"
+           app:layout_constraintBottom_toTopOf="@id/profile_BTN_my_sails"
+           android:name="com.idan_koren_israeli.sailtracker.user_info.PointsStatusFragment"
            tools:layout="@layout/fragment_points_status"
            android:id="@+id/profile_FRAG_points_status"
            />
 
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintHeight_percent="0.3"
-            android:id="@+id/profile_LBL_sails_count"
+            app:layout_constraintWidth_percent="0.35"
+            android:id="@+id/profile_BTN_my_sails"
             android:autoSizeMaxTextSize="22sp"
             android:autoSizeTextType="uniform"
             android:text="@string/sails"
             android:padding="5dp"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:gravity="top"
+            android:gravity="center"
             />
+
 
 
 
