--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -23,17 +23,6 @@
             android:background="@android:color/darker_gray"
             />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@android:color/black"
-            android:alpha="0.6"
-            android:id="@+id/calendar_LAY_loading"
-            app:layout_constraintTop_toBottomOf="@id/calendar_CALENDAR"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:visibility="gone"
-            android:elevation="2dp"
-            />
 
         <TextView
             android:layout_width="0dp"
@@ -77,6 +66,19 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/calendar_RCY_daily_events"
             android:layout_margin="10dp"
+            />
+
+        <fragment
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@android:color/black"
+            android:alpha="0.6"
+            tools:layout="@layout/fragment_loading"
+            android:id="@+id/calendar_FRAG_loading"
+            app:layout_constraintTop_toBottomOf="@id/calendar_CALENDAR"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:name="com.idan_koren_israeli.sailtracker.common.LoadingFragment"
+            android:visibility="visible"
             />
 
 
