--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -42,6 +42,7 @@
         />
 
 
+
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="0dp"
@@ -83,8 +84,7 @@
         />
 
 
-
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -97,9 +97,12 @@
         android:text="@string/next"
         android:autoSizeTextType="uniform"
         android:padding="20dp"
-        android:background="@android:color/black"
+        android:elevation="-1dp"
         android:id="@+id/login_BTN_next"
+        android:translationZ="-5dp"
         />
+
+
 
     <fragment
         android:layout_width="match_parent"
