--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintHeight_percent="0.2"
-            android:name="com.idan_koren_israeli.sailtracker.user_info.ProfileFragment"
+            android:name="com.idan_koren_israeli.sailtracker.common.ProfileFragment"
             app:layout_constraintTop_toBottomOf="@id/gallery_INV_1"
             tools:layout="@layout/fragment_profile_card"
             android:id="@+id/gallery_FRAG_profile"
