--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -27,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintHeight_percent="0.2"
-            android:name="com.idan_koren_israeli.sailtracker.user_info.ProfileFragment"
+            android:name="com.idan_koren_israeli.sailtracker.common.ProfileFragment"
             app:layout_constraintTop_toBottomOf="@id/search_SEARCH"
             tools:layout="@layout/fragment_profile_card"
             android:id="@+id/search_FRAG_profile"
