--- a/app/src/main/res/layout/recycler_registrable_event_item.xml
+++ b/app/src/main/res/layout/recycler_registrable_event_item.xml
@@ -110,6 +110,20 @@
                     android:layout_margin="25dp"
                     />
 
+                <com.google.android.material.button.MaterialButton
+                    app:layout_constraintTop_toBottomOf="@id/event_item_IMG_image"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    app:icon="@drawable/ic_baseline_photo_camera_24"
+                    app:iconTint="@android:color/black"
+                    android:theme="@style/FormButton"
+                    android:id="@+id/event_item_BTN_purchase"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+                    />
+
+
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
