--- a/app/src/main/res/layout/activity_my_sails.xml
+++ b/app/src/main/res/layout/activity_my_sails.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".my_sails.MySailsActivity"
+    tools:context=".history.HistoryActivity"
     android:orientation="vertical"
     >
 
