--- a/app/src/main/res/layout/recycler_event_item.xml
+++ b/app/src/main/res/layout/recycler_event_item.xml
@@ -46,32 +46,35 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/event_item_LBL_name"
-                    android:textSize="24sp"
+                    android:textSize="20sp"
+                    android:autoSizeMinTextSize="14sp"
+                    android:autoSizeMaxTextSize="24sp"
+                    android:gravity="start"
+                    android:text="@string/example_date"
+                    android:layout_marginStart="15dp"
+                    android:padding="4dp"
+                    android:id="@+id/event_item_LBL_date"
+                    />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/event_item_LBL_date"
+                    android:textSize="14sp"
                     android:text="@string/example_hour_range"
                     android:lines="1"
-                    android:autoSizeMinTextSize="18sp"
-                    android:autoSizeMaxTextSize="30sp"
+                    android:autoSizeMinTextSize="14sp"
+                    android:autoSizeMaxTextSize="18sp"
                     android:autoSizeTextType="uniform"
                     android:padding="4dp"
                     android:paddingEnd="25dp"
                     android:paddingStart="4dp"
                     android:layout_marginStart="15dp"
                     android:gravity="start"
-                    android:id="@+id/event_item_LBL_time"
+                    android:id="@+id/event_item_LBL_time_of_day"
                     />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/event_item_LBL_time"
-                    android:autoSizeMinTextSize="14sp"
-                    android:autoSizeMaxTextSize="24sp"
-                    android:gravity="start"
-                    android:text="@string/example_registration_status"
-                    android:layout_marginStart="15dp"
-                    android:padding="4dp"
-                    android:id="@+id/event_item_LBL_register_status"
-                    />
+
 
                 <TextView
                     android:layout_width="match_parent"
@@ -110,6 +113,18 @@
                     android:layout_margin="25dp"
                     />
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/event_item_IMG_image"
+                    android:autoSizeMinTextSize="14sp"
+                    android:autoSizeMaxTextSize="24sp"
+                    android:gravity="center"
+                    android:text="@string/example_registration_status"
+                    android:layout_marginStart="15dp"
+                    android:padding="4dp"
+                    android:id="@+id/event_item_LBL_register_status"
+                    />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
