--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -14,40 +14,35 @@
         android:layout_weight="0.92"
         >
 
-        <androidx.appcompat.widget.SearchView
+        <SearchView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_margin="20dp"
             app:layout_constraintHeight_percent="0.1"
-            android:id="@+id/search_SEARCH"
+            android:id="@+id/search_SEARCH_searchbar"
+            android:inputType="phone"
+            android:iconifiedByDefault="false"
             />
 
         <fragment
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.2"
+            app:layout_constraintHeight_percent="0.15"
             android:name="com.idan_koren_israeli.sailtracker.common.ProfileFragment"
-            app:layout_constraintTop_toBottomOf="@id/search_SEARCH"
+            app:layout_constraintTop_toBottomOf="@id/search_SEARCH_searchbar"
             tools:layout="@layout/fragment_profile_card"
             android:id="@+id/search_FRAG_profile"
             android:layout_marginTop="20dp"
             />
 
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/search_FRAG_profile"
-            android:id="@+id/search_INV_1"
-            app:layout_constraintHeight_percent="0.05"
-            />
 
         <fragment
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/search_INV_1"
-            app:layout_constraintHeight_percent="0.6"
+            app:layout_constraintTop_toBottomOf="@id/search_FRAG_profile"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/search_FRAG_collection"
             android:name="com.idan_koren_israeli.sailtracker.gallery.PhotoCollectionFragment"
             tools:layout="@layout/fragment_photo_collection"
