--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".calendar.CalendarActivity"
+    tools:context=".activity.CalendarActivity"
     android:orientation="vertical"
     android:weightSum="1">
 
@@ -46,7 +46,7 @@
 
 
         <fragment
-            android:name="com.idan_koren_israeli.sailtracker.common.PointsStatusFragment"
+            android:name="com.idan_koren_israeli.sailtracker.fragment.PointsStatusFragment"
             tools:layout="@layout/fragment_points_status"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -76,7 +76,7 @@
             android:id="@+id/calendar_FRAG_loading"
             app:layout_constraintTop_toBottomOf="@id/calendar_CALENDAR"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:name="com.idan_koren_israeli.sailtracker.common.LoadingFragment"
+            android:name="com.idan_koren_israeli.sailtracker.fragment.LoadingFragment"
             android:visibility="visible"
             />
 
@@ -90,7 +90,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.08"
         android:id="@+id/home_FRAG_navigator_bar"
-        android:name="com.idan_koren_israeli.sailtracker.common.NavigationBarFragment"
+        android:name="com.idan_koren_israeli.sailtracker.fragment.NavigationBarFragment"
         tools:layout="@layout/fragment_navigation_bar" />
 
 </LinearLayout>
