--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".search.SearchActivity"
+    tools:context=".activity.SearchActivity"
     android:orientation="vertical"
     android:weightSum="1">
 
@@ -29,11 +29,11 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintHeight_percent="0.15"
-            android:name="com.idan_koren_israeli.sailtracker.common.ProfileFragment"
+            android:name="com.idan_koren_israeli.sailtracker.fragment.ProfileFragment"
             app:layout_constraintTop_toBottomOf="@id/search_SEARCH_searchbar"
             tools:layout="@layout/fragment_profile_card"
             app:show_points_status="false"
-            app:show_events_button="false"
+            app:show_history_button="false"
             android:id="@+id/search_FRAG_profile"
             android:layout_marginTop="20dp"
             />
@@ -46,7 +46,7 @@
             app:layout_constraintTop_toBottomOf="@id/search_FRAG_profile"
             app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/search_FRAG_collection"
-            android:name="com.idan_koren_israeli.sailtracker.gallery.PhotoCollectionFragment"
+            android:name="com.idan_koren_israeli.sailtracker.fragment.PhotoCollectionFragment"
             tools:layout="@layout/fragment_photo_collection"
             />
 
@@ -62,7 +62,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.08"
         android:id="@+id/home_FRAG_navigator_bar"
-        android:name="com.idan_koren_israeli.sailtracker.common.NavigationBarFragment"
+        android:name="com.idan_koren_israeli.sailtracker.fragment.NavigationBarFragment"
         tools:layout="@layout/fragment_navigation_bar" />
 
 </LinearLayout>
