--- a/app/src/main/res/layout/fragment_loading.xml
+++ b/app/src/main/res/layout/fragment_loading.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".common.LoadingFragment"
+    tools:context=".fragment.LoadingFragment"
     android:background="@android:color/black"
     android:alpha="0.9">
 
