--- a/app/src/main/res/layout/fragment_profile_card.xml
+++ b/app/src/main/res/layout/fragment_profile_card.xml
@@ -70,7 +70,7 @@
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_LBL_name"
            app:layout_constraintBottom_toTopOf="@id/profile_BTN_my_sails"
-           android:name="com.idan_koren_israeli.sailtracker.common.PointsStatusFragment"
+           android:name="com.idan_koren_israeli.sailtracker.fragment.PointsStatusFragment"
            tools:layout="@layout/fragment_points_status"
            android:id="@+id/profile_FRAG_points_status"
            />
