--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -89,7 +89,7 @@
             app:layout_constraintBottom_toTopOf="@id/home_INV_4"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
-            android:name="com.idan_koren_israeli.sailtracker.fragment.NextSailFragment"
+            android:name="com.idan_koren_israeli.sailtracker.fragment.NextEventFragment"
             tools:layout="@layout/fragment_next_sail_card"
             android:id="@+id/home_FRAG_next_sailing"
             />
