--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -77,6 +77,8 @@
             app:layout_constraintTop_toBottomOf="@id/calendar_CALENDAR"
             app:layout_constraintBottom_toBottomOf="parent"
             android:name="com.idan_koren_israeli.sailtracker.fragment.LoadingFragment"
+            app:show_message="true"
+            app:message="@string/loading_msg_events"
             android:visibility="visible"
             />
 
