--- a/app/src/main/res/layout/recycler_message_item.xml
+++ b/app/src/main/res/layout/recycler_message_item.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="60dp"
     android:padding="5dp"
-    android:layout_marginStart="20dp"
+    android:layout_marginStart="10dp"
     android:layout_marginEnd="40dp"
     android:layout_gravity="center_horizontal">
 
@@ -13,8 +12,11 @@
         android:layout_height="match_parent"
         android:text="@string/example_date"
         android:gravity="center_vertical"
-        android:padding="20dp"
-        android:textSize="20sp"
+        android:lines="1"
+        android:padding="10dp"
+        android:autoSizeMinTextSize="12sp"
+        android:autoSizeMaxTextSize="20sp"
+        android:autoSizeTextType="uniform"
         android:id="@+id/message_item_LBL_text"
         />
 
